--- a/Ruben.html
+++ b/Ruben.html
@@ -52,9 +52,9 @@
       <div class="container" data-aos="zoom-in">
         <h2>Projects</h2>
 
-        <a href="youtube.html" target="_blank">
+        <a href="yt-clone/youtube.html" target="_blank">
         <div class="project-card" data-aos="zoom-in">
-          <img src="yt-clone.png" alt="YouTube Clone Screenshot" />
+          <img src="images/yt-clone.png" alt="YouTube Clone Screenshot" />
           <h3>YouTube Homepage Clone</h3>
           <p>A responsive static clone of YouTube’s homepage built using HTML and CSS. Includes navbar, sidebar, video thumbnails, and a grid layout.</p>
         </div>
