--- a/index.html
+++ b/index.html
@@ -84,7 +84,15 @@
     <section id="contact">
       <div class="container" data-aos="slide-right">
         <h2>Contact</h2>
-        <p>Find me on GitHub or LinkedIn (links coming soon!)</p>
+        <p>You can find me here:</p>
+        <ul class="contact-links">
+          <li>
+            <a href="https://github.com/devrubey" target="_blank">GitHub</a>
+          </li>
+          <li>
+            <span>LinkedIn (coming soon)</span>
+          </li>
+        </ul>
       </div>
     </section>
 
